# esp-hal-ota

./: .envrc  .gitignore  Cargo.toml  README.md  devenv.nix
examples/: .env.example  .gitignore  Cargo.toml  build.rs  esp-ota-test.py  partitions.csv
examples/.cargo/: config.toml
examples/src/: main.rs
partition-reader/: Cargo.toml
partition-reader/src/: main.rs
simple-ota-server/: Cargo.toml
simple-ota-server/src/: main.rs
src/: crc32.rs  helpers.rs  lib.rs  logging.rs  mmu_hal.rs  paddr.rs  structs.rs
src/mmu_ll/: esp32.rs  esp32c2.rs  esp32c6.rs  esp32h2.rs  esp32s2.rs  esp32s3.rs  mod.rs
