[package]
name = "esp-hal-ota"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "OTA library for esp-hal"
repository = "https://github.com/filipton/esp-hal-ota"

[lib]

[dependencies]
embedded-storage = "0.3.1"
log = { version = "0.4.22", optional = true }

esp32 = { version = "0.35.0", optional = true }

esp32s2 = { version = "0.26.0", optional = true }
esp32s3 = { version = "0.30.0", optional = true }

esp32c2 = { version = "0.24.0", optional = true }
esp32c3 = { version = "0.27.0", optional = true }
esp32c6 = { version = "0.18.0", optional = true }

esp32h2 = { version = "0.14.0", optional = true }

[features]
default = ["log"]
log = ["dep:log"]

esp32 = ["dep:esp32"]

esp32s2 = ["dep:esp32s2"]
esp32s3 = ["dep:esp32s3"]

esp32c2 = ["dep:esp32c2"]
esp32c3 = ["dep:esp32c3"]
esp32c6 = ["dep:esp32c6"]

esp32h2 = ["dep:esp32h2"]
